--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -247,7 +247,7 @@
     <string name="there_are_no_dive_spots_here">There are no dive spots here</string>
     <string name="please_choose_another_location">Please choose another location</string>
     <string name="send">SEND</string>
-    <string name="write_a_review">At least 30 symbols</string>
+    <string name="write_a_review">e.g. Got an unforgettable experience. The dive spot is absolutely amazing with colorful reefs and lots of fish. We were lucky to spot manta rays and tiny shrimps.</string>
     <string name="start_process_register_for_gcm">Registering for Google services</string>
     <string name="please_zoom_in_to_request_dive_spots">Please zoom in to request dive spots</string>
     <string name="start_process_register_for_ddscanner">Registering for DDScanner services</string>
@@ -437,4 +437,10 @@
     <string name="depth_required">Depth is required</string>
     <string name="depth_vlue">Depth should be between 5 to 1092 meters</string>
     <string name="one_sealife">At least one sea life should be added</string>
+    <string name="rate_spot">Rate this spot</string>
+    <string name="share_a_few_words">Share a few words about your dive</string>
+    <string name="write_30_characters">Write at least 30 characters</string>
+    <string name="add_sealife_review">Don’t forget to add the sea life you saw</string>
+    <string name="have_a_photo">Have a photo to add?</string>
+    <string name="post_review">POST</string>
 </resources>
