--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -451,4 +451,6 @@
     <string name="enter_a_valid_phone_number">Enter a valid phone number</string>
     <string name="enter_a_valid_email_address">Enter a valid email address</string>
     <string name="user_liked_your_photo">%1$s liked yout photo %2$s</string>
+    <string name="company">Company</string>
+    <string name="reseller">Reseller</string>
 </resources>
