~ some ui fixes

--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -461,4 +461,5 @@
     <string name="no">NO</string>
     <string name="yes">YES</string>
     <string name="are_you_an_instructor">Are you an instructor?</string>
+    <string name="add_language_subtitle">It’s applied to name and description</string>
 </resources>
