--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -465,4 +465,6 @@
     <string name="add_photo_sealife">Add photo</string>
     <string name="please_choose_right_loction">Please, choose the right location of the dive center</string>
     <string name="remove_instructor_confriamtion">Remove this instructor from your list?</string>
+    <string name="single_review_pattern">%1$s review</string>
+    <string name="not_single_review_pattern">%1$s reviews</string>
 </resources>
