--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -468,4 +468,5 @@
     <string name="single_review_pattern">%1$s review</string>
     <string name="not_single_review_pattern">%1$s reviews</string>
     <string name="pattern_more_countries">+ %1$S</string>
+    <string name="price_from">From</string>
 </resources>
