--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -470,4 +470,5 @@
     <string name="pattern_more_countries">+ %1$S</string>
     <string name="price_from">From</string>
     <string name="dive_centers_divider">Dive centers</string>
+    <string name="paid">PAID</string>
 </resources>
