--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -473,4 +473,10 @@
     <string name="latitude">Latitude</string>
     <string name="longitude">Longitude</string>
     <string name="plus_photos_pattern">+%1$s</string>
+    <string name="address_edit_dc">Address</string>
+    <string name="open_map_dit_address">Open map</string>
+    <string name="location_address_edit">Location</string>
+    <string name="save_address_result">SAVE</string>
+    <string name="pattern_location_string">%1$s, %2$s</string>
+    <string name="edit_addres">Edit</string>
 </resources>
