--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -410,7 +410,8 @@
 
     <string name="activity_type_review_liked">%1$s liked your review %2$s</string>
     <string name="activity_achievement_achieved">%1$s got the title of %2$s. %3$s</string>
-    <string name="activity_type_review_disliked">%1$s disliked your review %2$s</string>
+    <string name="activity_type_review_disliked">%1$s disliked your review %2$s %3$s</string>
+    <string name="activity_type_self_achievement_achieved">Congrats! You’ve got the title of %1$s! Stay active and improve your profile! %2$s</string>
     <string name="diespors">Dive Spots</string>
     <string name="connection_error_title">Connection error</string>
     <string name="connection_error_text"></string>
