--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -406,12 +406,15 @@
     <string name="activity_type_photo_added">%1$s added %2$s photos to %3$s. %4$s</string>
     <string name="activity_type_single_photo_added">%1$s added a photo to %2$s. %3$s</string>
     <string name="activity_type_checked_in">%1$s checked in at %2$s. %3$s</string>
-    <string name="activity_type_left_dive_center">%1$s left your dive center. %2$s</string>
+    <string name="activity_type_left_dive_center">%1$s removed you from instructors. %2$s</string>
+    <string name="activity_type_maps_added">%1$s added %2$s maps to %3$s. %4$s</string>
+    <string name="activity_type_single_map_added">%1$s added a map to %2$s. %3$s</string>
 
     <string name="activity_type_review_liked">%1$s liked your review %2$s</string>
     <string name="activity_achievement_achieved">%1$s got the title of %2$s. %3$s</string>
     <string name="activity_type_review_disliked">%1$s disliked your review %2$s %3$s</string>
     <string name="activity_type_self_achievement_achieved">Congrats! You’ve got the title of %1$s! Stay active and improve your profile! %2$s</string>
+    <string name="activity_type_instructor_left_dive_center">%1$s left your dive center. %2$s</string>
     <string name="diespors">Dive Spots</string>
     <string name="connection_error_title">Connection error</string>
     <string name="connection_error_text"></string>
