--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -178,8 +178,8 @@
     <string name="open_on_google_plus">Open on Google+</string>
     <string name="locatio_dialog_title">To work with ddscanner you must enable location service. Do you want to do this?</string>
     <string name="add_photos_toolbar_title">Add photos</string>
-    <string name="no_notifications">No notificationOlds</string>
-    <string name="here_will_be_displayed_last_notifications">Last notificationOlds will be displayed here</string>
+    <string name="no_notifications">No notifications</string>
+    <string name="here_will_be_displayed_last_notifications">Last notifications will be displayed here</string>
     <string name="profile">Profile</string>
     <string name="ed">Edited</string>
     <string name="toolbar_title_check_ins">Check Ins</string>
@@ -490,4 +490,6 @@
     <string name="new_spots">NEW!</string>
     <string name="approve_count_pattern">%1$s new dive spots have to be approved</string>
     <string name="dive_spot_approve">Dive spots</string>
+    <string name="apply">APPLY</string>
+    <string name="single_reiew_title">Review</string>
 </resources>
