--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -142,7 +142,7 @@
     <string name="you_must_login_to_add_divespot">You must login to add divespot</string>
     <string name="login_or_sign_up">Login or Sign Up</string>
     <string name="profile_need_to_login">Login to view profile</string>
-    <string name="notifications_need_to_login">Login to view notificationOlds</string>
+    <string name="notifications_need_to_login">Login to view notifications</string>
     <string name="e_mail">E-mail</string>
     <string name="search_sealife">Search sealife</string>
     <string name="favorites">Favorites</string>
@@ -202,7 +202,7 @@
     <string name="terms_title_4">4. Revisions and Errata</string>
     <string name="terms_text_4">The materials appearing in Deep Dive Scanner could include technical, typographical, or photographic errors. Deep Dive Scanner does not warrant that any of these materials are accurate, complete, or current. Deep Dive Scanner may make changes to the materials contained in its app at any time without notice. Deep Dive Scanner does not, however, make any commitment to update the materials.</string>
     <string name="terms_title_5">5. Links</string>
-    <string name="terms_text_5">Deep Dive Scanner has not reviewed all of the internet web sites linked to from its app and is not responsible for the contents of any such linked site. The inclusion of any link does not imply endorsement by Deep Dive Scanner of the site. Use of any such linked site is at the userOld\'s own risk.</string>
+    <string name="terms_text_5">Deep Dive Scanner has not reviewed all of the internet web sites linked to from its app and is not responsible for the contents of any such linked site. The inclusion of any link does not imply endorsement by Deep Dive Scanner of the site. Use of any such linked site is at the user\'s own risk.</string>
     <string name="terms_title_6">6. Site Terms of Use Modifications</string>
     <string name="terms_text_6">Deep Dive Scanner may revise these terms of use for its app at any time without notice. By using this app you are agreeing to be bound by the then current version of these Terms and Conditions of Use.</string>
     <string name="terms">Terms and Conditions of Use</string>
@@ -218,7 +218,7 @@
     <string name="guide_question_4">How to edit a dive spot?</string>
     <string name="guide_question_5">How to leave a review?</string>
     <string name="guide_question_6">Why can’t I edit a dive spot?</string>
-    <string name="guide_description_1">The most active userOlds can become experts of a certain country due to their activity. We really appreciate every member of our diving community and grant the status of experts to those who participate actively in Deep Dive Scanner’s life. That can be those who left lots of reviews or added new dive spots, edited the information and shared lots of photos, etc.  Divers can ask experts for their opinion that is highly respective and informative. We will also give experts new bonuses that will be helpful .</string>
+    <string name="guide_description_1">The most active users can become experts of a certain country due to their activity. We really appreciate every member of our diving community and grant the status of experts to those who participate actively in Deep Dive Scanner’s life. That can be those who left lots of reviews or added new dive spots, edited the information and shared lots of photos, etc.  Divers can ask experts for their opinion that is highly respective and informative. We will also give experts new bonuses that will be helpful .</string>
     <string name="guide_description_2">You can add a new dive spot that we could have missed. Just open your app and find the icon with plus on the right side, tap on it and fill in all the fields and add photos to tell our diving community more about this dive spot.</string>
     <string name="guide_description_3">If you did not find a certain fish or other marine inhabitant you can create it either while adding a new dive spot or editing the existing one. Just tap on plus, type the name of the inhabitant you’d like to add, after that you see «add new», tap on this button and fill all the field required to provide necessary information to describe this inhabitant.</string>
     <string name="guide_description_4">Open your app and find the dive spot you’d like to edit. Scroll down and you see the question «Is the information valid?». If you want to change choose «no» and correct the information that is not accurate.</string>
@@ -280,21 +280,21 @@
     <string name="review_error">Review must contain at least 30 characters</string>
     <string name="please_write_a_review">Please write a review to dive spot</string>
     <string name="new_review">New Review</string>
-    <string name="comment_already_disliked">Dive spot commentOld has already been disliked</string>
-    <string name="comment_already_liked">Dive spot commentOld has already been liked</string>
+    <string name="comment_already_disliked">Dive spot comment has already been disliked</string>
+    <string name="comment_already_liked">Dive spot comment has already been liked</string>
     <string name="error_server_error_title">Error occurred</string>
     <string name="error_connection_error_title">Connection error</string>
     <string name="error_unexpected_error">Opps. Looks like we have an unexpected issue here. Report was captured</string>
     <string name="error_message_dive_spot_not_found">For some reason this dive spot was not found. Report was captured</string>
     <string name="error_message_you_cannot_report_self_photo">You cannot report self photo</string>
-    <string name="error_message_user_not_found">For some reason this userOld was not found. Report was captured</string>
+    <string name="error_message_user_not_found">For some reason this user was not found. Report was captured</string>
     <string name="error_unexpected_error_checkins_counter">Opps. Looks like we have an unexpected issue while updating checkins count. Report was captured</string>
     <string name="error_message_dive_spot_not_found_checkins_counter">For some reason while updating checkins count this dive spot was not found. Report was captured</string>
     <string name="error_unexpected_error_reviews_counter">Opps. Looks like we have an unexpected issue while updating reviews count. Report was captured</string>
-    <string name="error_message_comment_not_found">For some reason requested this commentOld was not found. Report was captured</string>
+    <string name="error_message_comment_not_found">For some reason requested this comment was not found. Report was captured</string>
     <string name="error_message_you_cannot_report_self_review">You cannot report self review</string>
-    <string name="error_message_comment_also_disliked">This commentOld was also disliked</string>
-    <string name="error_message_comment_also_liked">This commentOld was also liked</string>
+    <string name="error_message_comment_also_disliked">This comment was also disliked</string>
+    <string name="error_message_comment_also_liked">This comment was also liked</string>
     <string name="error_message_dive_spot_not_found_reviews_counter">For some reason while updating reviews count this dive spot was not found. Report was captured</string>
     <string name="error_message_already_checked_in">You have already checked in here</string>
     <string name="error_message_already_checked_out">You have already checked out of here</string>
@@ -302,8 +302,8 @@
     <string name="error_message_already_removed_from_favourites">You have already removed this dive spot from favourites</string>
     <string name="error_message_already_validated_dive_spot_data">You have already validated this dive spot data</string>
     <string name="error_connection_failed">Failed to connect to DDScanner service. Please check your internet connection.</string>
-    <string name="error_self_comment_like_banned">You cannot like your commentOld</string>
-    <string name="error_self_comment_dislike_banned">You cannot dislike your commentOld</string>
+    <string name="error_self_comment_like_banned">You cannot like your comment</string>
+    <string name="error_self_comment_dislike_banned">You cannot dislike your comment</string>
     <string name="error_no_rights_to_edit_dive_spot">Sorry, but only dive centers can edit this dive spot.</string>
     <string name="error_connection_failed_while_getting_dive_spots">Failed to connect to DDScanner service while requesting dive spots. Please check your internet connection.</string>
     <string name="error_unexpected_error_while_getting_dive_spots">Opps. Looks like we have an unexpected issue while trying to get dive spots. Report was captured</string>
