~ completely working popups

--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -508,4 +508,5 @@
     <string name="review_sent_toast">Review sent</string>
     <string name="profile_dive_center">Dive Center</string>
     <string name="log_out">Log out</string>
+    <string name="ok_i_got_it">OK, I GOT IT</string>
 </resources>
