--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -390,7 +390,7 @@
     <string name="add_ds">Add dive spot</string>
     <string name="open_map">open map</string>
     <string name="addressd">Address</string>
-    <string name="choose_dc">Chose dive center</string>
+    <string name="choose_dc">Choose dive center</string>
     <string name="instructors">Instructors</string>
     <string name="name_register">Name</string>
     <string name="chose_country">Choose country</string>
