~ other reason report dialog

--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -528,4 +528,9 @@
     <string name="cant_delete_all_photos">You can not delete all photos of the dive spot</string>
     <string name="add_maps">Add map</string>
     <string name="checkins_reiew_count_smaller_of_two">%1$s review</string>
+    <string name="write_a_reason">Write a reason</string>
+    <string name="cancel_reason">CANCEL</string>
+    <string name="send_reason">SEND</string>
+    <string name="report_other_title">Report</string>
+    <string name="write_a_report__reason">Write a reason</string>
 </resources>
