--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -353,7 +353,7 @@
     <string name="country_characteristic">Country</string>
     <string name="acievements_block_title">Achievements</string>
     <string name="photos_block_title">Photos</string>
-    <string name="no_photos_yet">The user has not uploaded the photos yet</string>
+    <string name="no_photos_yet">You haven’t uploaded any photos yet</string>
     <string name="pass_incorrect">The email or password you entered is incorrect. Please, try again</string>
     <string name="title_pass_incorrect">We couldn’t sign you in</string>
     <string name="title_email_exist">We couldn’t sign you up</string>
@@ -527,4 +527,10 @@
     <string name="email_incorrect">Email is incorrect</string>
     <string name="cant_delete_all_photos">You can not delete all photos of the dive spot</string>
     <string name="add_maps">Add map</string>
+    <string name="checkins_reiew_count_smaller_of_two">%1$s review</string>
+    <string name="write_a_reason">Write a reason</string>
+    <string name="cancel_reason">CANCEL</string>
+    <string name="send_reason">SEND</string>
+    <string name="report_other_title">Report</string>
+    <string name="write_a_report__reason">Write a reason</string>
 </resources>
