--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -114,7 +114,7 @@
     <string name="dialog_check_in_no">OK</string>
     <string name="dialog_cancel">CANCEL</string>
     <string name="ok">OK</string>
-    
+
     <string name="user_made_checkin">%1$s has also checked in at %2$s</string>
     <string name="divespot_was_changed">%1$s has been changed</string>
     <string name="new_dive_spothas_been_added_near">New dive spot was added - %1$s</string>
@@ -533,4 +533,8 @@
     <string name="send_reason">SEND</string>
     <string name="report_other_title">Report</string>
     <string name="write_a_report__reason">Write a reason</string>
+    <string name="name_is_required_dc">Name is required</string>
+    <string name="please_check_the_email_before_inviting_the_dive_center">Please, check the email before inviting the dive center</string>
+    <string name="invite_a_dive_center">INVITE A DIVE CENTER</string>
+    <string name="new_dive_center">New dive center</string>
 </resources>
