--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -538,4 +538,5 @@
     <string name="invite_a_dive_center">INVITE A DIVE CENTER</string>
     <string name="new_dive_center">New dive center</string>
     <string name="no_address_provided">No address provided</string>
+    <string name="address_is_required">Address is required</string>
 </resources>
