--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -522,7 +522,7 @@
     <string name="rate_ds_error">Please, rate the dive spot</string>
     <string name="dc_cant_leave_review">Dive centers are not allowed to write reviews</string>
     <string name="no_results_found">No results found.</string>
-    <string name="add_new_spots"> Add new?</string>
+    <string name="add_new_spots">\u0020Add new?</string>
     <string name="user_email_not_found">User with specified email not found</string>
     <string name="email_incorrect">Email is incorrect</string>
     <string name="cant_delete_all_photos">You can not delete all photos of the dive spot</string>
